[package]
name = "rt_macro"
version.workspace = true
edition.workspace = true

[lib]
proc-macro = true


[dependencies]
proc-macro2 = "1"
quote = { version = "1", default-features = false }
syn = { version = "2", default-features = false, features = [ "full", "parsing", "printing", "proc-macro" ] }

[dev-dependencies]
cmoon = { path = "..", features = ["macro"]  }